test/tests/operators/from_nats/error_auth_password_without_user.txt
error: `auth.password` requires `auth.user`
 --> tests/operators/from_nats/error_auth_password_without_user.tql:6:16
  |
6 |           auth={password: "secret"}
  |                ^^^^^^^^^^^^^^^^^^^^ 
  |
